Empezando Chat y muchos test unitarios en backend, tanto de controladores como de servicios